k8s-config/sql-server.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sql-server
  labels:
    app: rv-sql-server
    tier: sql-server
spec:
  replicas: 1
  selector:
    matchLabels:
      tier: sql-server
  template:
    metadata:
      labels:
        tier: sql-server
    spec:
      containers:
      - name: rv-sql-server-1
        image: guose79/sql-server:github
        ports:
        - containerPort: 1433
        volumeMounts:
        - name: sql-data-volume
          mountPath: /var/opt/mssql/data/
      volumes:
      - name: sql-data-volume
        persistentVolumeClaim:
          claimName: rvrental-db-pvc
