k8s-config/email-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: email
  labels:
    app: rv-email
    tier: email
spec:
  replicas: 1
  selector:
    matchLabels:
      tier: email
  template:
    metadata:
      labels:
        tier: email
    spec:
      containers:
      - name: rv-email-1
        image: guose79/email:github
        ports:
        - containerPort: 6000
---
apiVersion: v1
kind: Service
metadata:
  name: email-service
  labels:
    app: rv-email
    tier: email
spec:
  type: LoadBalancer
  ports:
  - name: "http"
    port: 6000
    targetPort: 6000
    nodePort: 30003
  selector:
    tier: email
