k8s-config/express.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: express
  labels:
    app: rv-express
    tier: express
spec:
  replicas: 1
  selector:
    matchLabels:
      tier: express
  template:
    metadata:
      labels:
        tier: express
    spec:
      containers:
      - name: rv-express-1
        image: guose79/express:github
        ports:
        - containerPort: 3001
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: rv-express
    tier: express
  name: express-service
spec:
  type: ClusterIP
  ports:
  - name: "http"
    port: 3001
    targetPort: 3001
  selector:
    tier: express
