k8s-config/react.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react
  labels:
    app: rv-react
    tier: react
spec:
  replicas: 1
  selector:
    matchLabels:
      tier: react
  template:
    metadata:
      labels:
        tier: react
    spec:
      containers:
      - name: rv-react-1
        image: guose79/react:github
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: rv-react
    tier: react
  name: react-service
spec:
  type: LoadBalancer
  ports:
  - name: "http"
    port: 3000
    targetPort: 3000
  selector:
    tier: react
