k8s-config/webapi.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapi
  labels:
    app: rv-webapi
    tier: webapi
spec:
  replicas: 2
  selector:
    matchLabels:
      tier: webapi
  template:
    metadata:
      labels:
        tier: webapi
    spec:
      containers:
      - name: rv-webapi-1
        image: guose79/webapi:github
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: rv-webapi
    tier: webapi
  name: webapi-service
spec:
  type: LoadBalancer
  ports:
  - name: "http"
    port: 5000
    targetPort: 5000
    nodePort: 30002
  selector:
    tier: rv-webapi
